# flakyjudge

./: .gitignore  LICENSE  Makefile  PREREGISTRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: e1_analysis.py  e3_analysis.py  e4_analysis.py  make_figures.py  supplementary.py
config/: judges.yaml
data/: items_e1.jsonl  items_perturb.jsonl  paraphrase_gate_report.json  paraphrases.jsonl  spot_check_sample.jsonl  verbosity.jsonl
experiments/: adjudicate_paraphrases.py  e1_anchor.py  e2_noise_floor.py  e3_paraphrase.py  e4_verbosity.py  gen_paraphrases.py  gen_verbosity.py  rescue_parse_failures.py
report/: report.md
results/: e1_scores.parquet  e2_scores.parquet  e3_scores.parquet  e4_scores.parquet  rescue_scores.parquet  supplementary.json
src/flakyjudge/: __init__.py  cache.py  data.py  ensemble.py  metrics.py  prompts.py  runner.py  scoring.py
src/flakyjudge/perturb/: paraphrase.py  verbosity.py
src/flakyjudge/providers/: base.py  client.py
tests/: test_cache.py  test_ensemble.py  test_metrics.py  test_providers.py  test_scoring.py
