[project]
name = "flakyjudge"
version = "0.1.0"
description = "How stable are natural-language unit tests for LLM evals? An empirical robustness study and mitigation library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shiva Sankeerth", email = "shivasankeerth@gmail.com" }]
keywords = ["llm", "evaluation", "llm-as-judge", "robustness", "unit-tests"]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "datasets>=2.19",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flakyjudge"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
