[project]
name = "flakyjudge"
version = "0.1.1"
description = "How stable are natural-language unit tests for LLM evals? An empirical robustness study and mitigation library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shiva Sankeerth", email = "shivasankeerth@gmail.com" }]
keywords = ["llm", "evaluation", "llm-as-judge", "robustness", "unit-tests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "datasets>=2.19",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/ShivaSankeerth/flakyjudge"
"Tech Report" = "https://github.com/ShivaSankeerth/flakyjudge/blob/main/report/report.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flakyjudge"]

[tool.hatch.build.targets.sdist]
# Library sources only - study data/figures/results live in the git repo.
only-include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Experiment/analysis scripts insert src/ into sys.path before imports.
"experiments/*" = ["E402"]
"analysis/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
